Adjust env vars, remove travis.

--- a/.env.dev
+++ b/.env.dev
@@ -1,14 +1,12 @@
-REACT_APP_JORE_GRAPHQL_URL=https://dev-kartat.hsldev.com/jore-history/graphql
-REACT_APP_HFP_GRAPHQL_URL=https://sandbox-1.hsldev.com/v1alpha1/graphql
-REACT_APP_TRANSITLOG_SERVER=https://dev-kartat.hsldev.com/transitlog-server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev-kartat.hsldev.com/transitlog-server/graphql/
-REACT_APP_TRANSITLOG=https://dev-transitlog.hsldev.com
+REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/transitlog-server/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/transitlog-server/graphql/
+REACT_APP_TRANSITLOG=https://dev.reittiloki.hsl.fi
 
 # Auth
 REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
 REACT_APP_CLIENT_ID=7510123698297597
 # Change this in your .env.local to http://localhost:3000
-REACT_APP_REDIRECT_URI=https://dev-transitlog.hsldev.com
+REACT_APP_REDIRECT_URI=https://dev.reittiloki.hsl.fi
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
 # Change this to false in production.
