--- a/.env.stage
+++ b/.env.stage
@@ -1,19 +1,19 @@
-REACT_APP_TRANSITLOG_SERVER=https://reittiloki.hsl.fi/server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://reittiloki.hsl.fi/server/graphql/
-REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
+REACT_APP_TRANSITLOG_SERVER=https://stage.reittiloki.hsl.fi/transitlog-server/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://stage.reittiloki.hsl.fi/transitlog-server/graphql/
+REACT_APP_TRANSITLOG=https://stage.reittiloki.hsl.fi
 
 # Auth
 REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
 REACT_APP_CLIENT_ID=7510123698297597
 # Change this in your .env.local to http://localhost:3000
-REACT_APP_REDIRECT_URI=https://reittiloki.hsl.fi
+REACT_APP_REDIRECT_URI=https://stage.reittiloki.hsl.fi
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
 # Change this to false in production.
 REACT_APP_ALLOW_DEV_LOGIN=false
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
+REACT_APP_PRODUCTION_URL=https://dev-transitlog.hsldev.com
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
