--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 REACT_APP_TRANSITLOG_SERVER=http://localhost:4000/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
-REACT_APP_TRANSITLOG=https://transitlog.hsldev.com
+REACT_APP_TRANSITLOG=https://dev-transitlog.hsldev.com
 
 # Auth
 REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
@@ -13,7 +13,7 @@ REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 REACT_APP_ALLOW_DEV_LOGIN=true
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://transitlog.hsldev.com
+REACT_APP_PRODUCTION_URL=https://dev-transitlog.hsldev.com
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
