Fix old graphql url.

--- a/.env.old
+++ b/.env.old
@@ -1,5 +1,5 @@
 REACT_APP_TRANSITLOG_SERVER=https://dev-kartat.hsldev.com/transitlog-server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev-kartat.hsldev.com/server/graphql/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev-kartat.hsldev.com/transitlog-server/graphql/
 REACT_APP_TRANSITLOG=https://dev-transitlog.hsldev.com
 
 # Auth
