--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/transitlog-server/
+REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/server/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/transitlog-server/graphql/
 REACT_APP_TRANSITLOG=https://dev.reittiloki.hsl.fi
 
