--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/transitlog-server/graphql/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/server/graphql/
 REACT_APP_TRANSITLOG=https://dev.reittiloki.hsl.fi
 
 # Auth
@@ -13,7 +13,7 @@ REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 REACT_APP_ALLOW_DEV_LOGIN=false
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://dev-transitlog.hsldev.com
+REACT_APP_PRODUCTION_URL=https://dev.reittiloki.hsl.fi
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
