--- a/.env.stage
+++ b/.env.stage
@@ -1,5 +1,5 @@
 REACT_APP_TRANSITLOG_SERVER=https://stage.reittiloki.hsl.fi/server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://stage.reittiloki.hsl.fi/transitlog-server/graphql/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://stage.reittiloki.hsl.fi/server/graphql/
 REACT_APP_TRANSITLOG=https://stage.reittiloki.hsl.fi
 
 # Auth
