Provide the language variable in alerts query.

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -7,6 +7,12 @@
         "method": "POST",
         "introspect": true,
         "headers": { "user-agent": "JS GraphQL" }
+      },
+      "Transitlog server dev": {
+        "url": "https://dev.reittiloki.hsl.fi/server/graphql",
+        "method": "POST",
+        "introspect": true,
+        "headers": { "user-agent": "JS GraphQL" }
       }
     }
   }
