--- a/codegen.yml
+++ b/codegen.yml
@@ -1,11 +1,12 @@
+schema: 'http://localhost:4000/graphql'
 overwrite: true
-documents: null
 generates:
+  ./src/fragmentTypes.json:
+    plugins:
+      - 'fragment-matcher'
   ./schema-types.d.ts:
-    schema: 'http://localhost:4000/graphql'
     plugins:
       - 'typescript'
   ./graphql.schema.json:
-    schema: 'http://localhost:4000/graphql'
     plugins:
       - 'introspection'
