--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/runtime": "7.4.5",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/runtime": "7.6.2",
     "@fmidev/metolib": "^2.0.6",
-    "@svgr/webpack": "^4.3.0",
-    "@testing-library/react": "^8.0.1",
+    "@svgr/webpack": "^4.3.3",
+    "@testing-library/react": "^9.1.4",
     "@types/jest": "^24.0.15",
     "@types/moment-timezone": "^0.5.10",
-    "@types/react": "^16.8.20",
+    "@types/react": "^16.9.3",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-batch-http": "^1.2.12",
-    "apollo-link-error": "^1.1.11",
-    "apollo-link-http": "^1.5.15",
+    "apollo-link": "^1.2.13",
+    "apollo-link-batch-http": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-preset-react-app": "^9.0.0",
-    "bfj": "^6.1.1",
-    "browserslist": "4.6.3",
-    "caniuse-lite": "1.0.30000975",
+    "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-preset-react-app": "^9.0.2",
+    "bfj": "^7.0.1",
+    "browserslist": "4.7.0",
+    "caniuse-lite": "1.0.30000997",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.4.1",
-    "copy-text-to-clipboard": "^2.1.0",
+    "copy-text-to-clipboard": "^2.1.1",
     "css-loader": "^3.0.0",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-flowtype": "^3.10.3",
+    "eslint": "^6.4.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.0",
@@ -46,9 +46,9 @@
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "^8.0.1",
     "fuse.js": "^3.4.5",
-    "graphql": "^14.3.1",
+    "graphql": "^14.5.7",
     "graphql-tag": "^2.10.0",
-    "history": "^4.7.2",
+    "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
@@ -56,8 +56,8 @@
     "leaflet": "^1.5.1",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.11",
-    "mapillary-js": "^2.18.0",
-    "mini-css-extract-plugin": "0.7.0",
+    "mapillary-js": "^2.18.1",
+    "mini-css-extract-plugin": "0.8.0",
     "mobx": "^5.10.1",
     "mobx-app": "^1.0.3",
     "mobx-react": "^6.0.4",
@@ -69,7 +69,7 @@
     "p-all": "^2.1.0",
     "p-each-series": "^2.1.0",
     "p-finally": "^2.0.0",
-    "p-map": "^2.1.0",
+    "p-map": "^3.0.0",
     "p-queue": "^6.0.2",
     "pnp-webpack-plugin": "^1.5.0",
     "polished": "^3.4.1",
@@ -79,14 +79,14 @@
     "postcss-safe-parser": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
-    "react-app-polyfill": "^1.0.1",
+    "react-apollo": "^3.1.1",
+    "react-app-polyfill": "^1.0.3",
     "react-autosuggest": "^9.4.2",
-    "react-datepicker": "^2.7.0",
-    "react-dev-utils": "^9.0.1",
+    "react-datepicker": "2.7.0",
+    "react-dev-utils": "^9.0.4",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-fetch-hook": "^1.6.2",
-    "react-hot-loader": "^4.11.1",
+    "react-hot-loader": "^4.12.14",
     "react-icons": "^3.7.0",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
@@ -96,16 +96,16 @@
     "react-virtualized": "^9.21.1",
     "react-vis": "^1.11.7",
     "resolve": "^1.11.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "serve": "^11.0.1",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.3.1",
-    "styled-react-modal": "^1.2.1",
-    "terser-webpack-plugin": "^1.3.0",
+    "style-loader": "^1.0.0",
+    "styled-components": "^4.4.0",
+    "styled-react-modal": "^2.0.0",
+    "terser-webpack-plugin": "^2.1.0",
     "url-loader": "^2.0.0",
-    "webpack": "^4.34.0",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-manifest-plugin": "^2.0.4",
+    "webpack": "^4.41.0",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-manifest-plugin": "^2.1.1",
     "workbox-webpack-plugin": "^4.3.0"
   },
   "scripts": {
@@ -124,29 +124,25 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "@graphql-codegen/cli": "^1.2.1",
     "@graphql-codegen/fragment-matcher": "^1.7.0",
     "@graphql-codegen/introspection": "^1.2.1",
     "@graphql-codegen/typescript": "^1.2.1",
     "babel-plugin-styled-components": "^1.10.1",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react-hooks": "^1.0.1",
-    "husky": "^2.4.1",
-    "jest-dom": "^3.5.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "husky": "^3.0.5",
+    "jest-dom": "^4.0.0",
     "jest-environment-jsdom-thirteen": "^1.0.1",
     "jest-styled-components": "^6.3.3",
-    "lint-staged": "^8.2.1",
+    "lint-staged": "^9.3.0",
     "mobx-react-devtools": "^6.0.3",
-    "patch-package": "^6.1.2",
+    "patch-package": "^6.2.0",
     "postinstall-prepare": "^1.0.1",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.6"
-  },
-  "resolutions": {
-    "browserslist": "4.6.2",
-    "caniuse-lite": "1.0.30000974"
   },
   "lint-staged": {
     "src/**/*.js": [
