--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.13",
     "apollo-link-batch-http": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "babel-core": "7.0.0-bridge.0",
