--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "chalk": "^2.4.1",
     "copy-text-to-clipboard": "^2.1.1",
     "css-loader": "^3.0.0",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.4.1",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^6.4.0",
@@ -83,7 +83,7 @@
     "react-apollo": "^3.1.1",
     "react-app-polyfill": "^1.0.3",
     "react-autosuggest": "^9.4.2",
-    "react-datepicker": "2.7.0",
+    "react-datepicker": "^2.9.6",
     "react-dev-utils": "^9.0.4",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-fetch-hook": "^1.6.2",
