--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "7.6.2",
+    "@date-fns/upgrade": "^1.0.1",
     "@fmidev/metolib": "^2.0.6",
     "@svgr/webpack": "^4.3.3",
     "@testing-library/react": "^9.1.4",
