--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "react-apollo": "^3.1.1",
     "react-app-polyfill": "^1.0.3",
     "react-autosuggest": "^9.4.2",
-    "react-datepicker": "^2.9.6",
+    "react-datepicker": "2.7.0",
     "react-dev-utils": "^9.0.4",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-fetch-hook": "^1.6.2",
