Fix stage sharing url.

--- a/.env.stage
+++ b/.env.stage
@@ -13,7 +13,7 @@ REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 REACT_APP_ALLOW_DEV_LOGIN=false
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://dev-transitlog.hsldev.com
+REACT_APP_PRODUCTION_URL=https://stage.reittiloki.hsl.fi
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
