Add cypress script.

--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "lint": "eslint \"src/**/*.js\" --fix",
     "production": "forever start -c \"yarn run serve -s -l 3000\" build && forever logs -f 0",
     "prepare": "patch-package",
-    "codegen": "gql-gen --config codegen.yml"
+    "codegen": "gql-gen --config codegen.yml",
+    "cypress": "cypress open"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
