--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "@graphql-codegen/typescript": "^1.2.1",
     "babel-plugin-styled-components": "^1.10.1",
     "cypress": "^3.5.0",
+    "cypress-commands": "^0.3.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
