--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,10 @@
 REACT_APP_TRANSITLOG_SERVER=http://localhost:4000/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
-REACT_APP_TRANSITLOG=https://dev-transitlog.hsldev.com
+REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
 
 # Auth
 REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
 REACT_APP_CLIENT_ID=7510123698297597
-# Change this in your .env.local to http://localhost:3000
 REACT_APP_REDIRECT_URI=http://localhost:3000
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
@@ -13,7 +12,7 @@ REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 REACT_APP_ALLOW_DEV_LOGIN=true
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://dev-transitlog.hsldev.com
+REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
