--- a/.env.cypress
+++ b/.env.cypress
@@ -3,10 +3,10 @@ REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
 REACT_APP_TRANSITLOG=https://localhost:3000
 
 # Auth
-REACT_APP_AUTH_URI=https://hslid-dev.t5.fi/openid/auth
+REACT_APP_AUTH_URI=https://hslid-dev.t5.fi/openid/token
 REACT_APP_CLIENT_ID=0393058264298357
 REACT_APP_REDIRECT_URI=http://localhost:3000
-REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
+REACT_APP_AUTH_SCOPE=email https://oneportal.trivore.com/scope/groups.readonly
 
 # Change this to false in production.
 REACT_APP_ALLOW_DEV_LOGIN=true
