--- a/package.json
+++ b/package.json
@@ -80,15 +80,15 @@
     "postcss-preset-env": "^6.6.0",
     "postcss-safe-parser": "^4.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "react": "^16.11.0",
     "react-apollo": "^3.1.1",
     "react-app-polyfill": "^1.0.3",
     "react-autosuggest": "^9.4.2",
     "react-datepicker": "2.7.0",
     "react-dev-utils": "^9.0.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.11.0",
     "react-fetch-hook": "^1.6.2",
-    "react-hot-loader": "^4.12.14",
+    "react-hot-loader": "^4.12.15",
     "react-icons": "^3.7.0",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
