--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "babel-plugin-styled-components": "^1.10.1",
     "cypress": "^3.5.0",
     "cypress-commands": "^0.3.1",
+    "cypress-wait-until": "^1.5.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
