--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@ yarn-error.log*
 
 cypress/integration/examples/*.js
 cypress/fixtures/example.json
-cypress/videos/*
-cypress/screenshots/*
+cypress/videos
+cypress/screenshots
