--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,7 @@ cache:
   directories:
     # we also need to cache folder with Cypress binary
     - ~/.cache
+install:
+  - yarn
 script:
   - yarn cypress run --record
