--- a/.env.local
+++ b/.env.local
@@ -3,8 +3,8 @@ REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
 REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
 
 # Auth
-REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
-REACT_APP_CLIENT_ID=7510123698297597
+REACT_APP_AUTH_URI=https://id.hsl.fi/openid/auth
+REACT_APP_CLIENT_ID=0220583783240827
 REACT_APP_REDIRECT_URI=http://localhost:3000
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
