--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-icons": "^3.7.0",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
+    "react-markdown": "^4.2.2",
     "react-primitives-svg": "^0.0.3",
     "react-spring": "^8.0.25",
     "react-timer-hook": "^1.1.6",
