Add env name to site header for non-prod envs.

--- a/.env.stage
+++ b/.env.stage
@@ -1,3 +1,5 @@
+REACT_APP_ENV_NAME=stage
+
 REACT_APP_TRANSITLOG_SERVER=https://stage.reittiloki.hsl.fi/server/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://stage.reittiloki.hsl.fi/server/graphql/
 REACT_APP_TRANSITLOG=https://stage.reittiloki.hsl.fi
