--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,5 @@
+REACT_APP_ENV_NAME=dev
+
 REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/server/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/server/graphql/
 REACT_APP_TRANSITLOG=https://dev.reittiloki.hsl.fi
