--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
+REACT_APP_ENV_NAME=local
+
 REACT_APP_TRANSITLOG_SERVER=http://localhost:4000/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
 REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
