--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "react-hooks/rules-of-hooks": 2,
     "react-hooks/exhaustive-deps": 0,
     "prettier/prettier": 1,
+    "no-unused-vars": 1,
     "array-callback-return": 0
   },
   "overrides": []
