--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
+REACT_APP_ENV_NAME=
+
 REACT_APP_TRANSITLOG_SERVER=https://reittiloki.hsl.fi/server/
 REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://reittiloki.hsl.fi/server/graphql/
 REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
