--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "react-hooks/rules-of-hooks": 2,
     "react-hooks/exhaustive-deps": 0,
     "prettier/prettier": 1,
-    "array-callback-return": 0
+    "array-callback-return": 0,
+    "react/jsx-no-target-blank": 0
   },
   "overrides": []
 }
