--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-fetch-hook": "^1.6.2",
     "react-hot-loader": "^4.12.15",
     "react-icons": "^3.7.0",
+    "react-is": "^16.12.0",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
     "react-markdown": "^4.2.2",
@@ -102,7 +103,7 @@
     "sass-loader": "^8.0.0",
     "serve": "^11.0.1",
     "style-loader": "^1.0.0",
-    "styled-components": "^4.4.0",
+    "styled-components": "^5.0.0",
     "styled-react-modal": "^2.0.0",
     "terser-webpack-plugin": "^2.1.0",
     "url-loader": "^2.0.0",
