--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-testing": "^3.1.3",
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "7.6.2",
@@ -14,7 +19,7 @@
     "@types/moment-timezone": "^0.5.10",
     "@types/react": "^16.9.3",
     "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.4",
+    "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
     "apollo-link-batch-http": "^1.2.13",
     "apollo-link-context": "^1.0.19",
@@ -81,7 +86,6 @@
     "postcss-safe-parser": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.11.0",
-    "react-apollo": "^3.1.1",
     "react-app-polyfill": "^1.0.3",
     "react-autosuggest": "^9.4.2",
     "react-datepicker": "2.7.0",
