--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,14 @@
 {
   "presets": [["react-app", {"modules": false}]],
   "plugins": [
-    "react-hot-loader/babel",
     "@babel/plugin-transform-runtime",
     ["@babel/plugin-proposal-decorators", {"legacy": true}],
     ["@babel/plugin-proposal-class-properties", {"loose": true}],
     "babel-plugin-styled-components"
-  ]
+  ],
+  "env": {
+    "development": {
+      "plugins": ["react-refresh/babel"]
+    }
+  }
 }
