--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
     "jest-resolve": "^24.7.1",
-    "leaflet": "^1.5.1",
+    "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.11",
     "mapillary-js": "^2.18.1",
@@ -94,7 +94,7 @@
     "react-fetch-hook": "^1.6.2",
     "react-hot-loader": "^4.12.15",
     "react-icons": "^3.7.0",
-    "react-leaflet": "^2.4.0",
+    "react-leaflet": "^2.6.1",
     "react-leaflet-draw": "^0.19.0",
     "react-markdown": "^4.2.2",
     "react-primitives-svg": "^0.0.3",
@@ -141,6 +141,7 @@
     "@graphql-codegen/fragment-matcher": "^1.8.3",
     "@graphql-codegen/introspection": "^1.8.3",
     "@graphql-codegen/typescript": "^1.8.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.3",
     "babel-plugin-styled-components": "^1.10.1",
     "cypress": "^3.5.0",
     "cypress-commands": "^0.3.1",
@@ -158,6 +159,7 @@
     "patch-package": "^6.2.0",
     "postinstall-prepare": "^1.0.1",
     "prettier": "^1.18.2",
+    "react-refresh": "^0.7.2",
     "react-test-renderer": "^16.8.6"
   },
   "lint-staged": {
