--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "styled-react-modal": "^2.0.0",
     "terser-webpack-plugin": "^2.1.0",
     "url-loader": "^2.0.0",
+    "use-debounce": "^3.3.0",
     "webpack": "^4.41.0",
     "webpack-dev-server": "^3.8.1",
     "webpack-manifest-plugin": "^2.1.1",
