--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "react-autosuggest": "^9.4.2",
     "react-datepicker": "2.7.0",
     "react-dev-utils": "^9.0.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.11.0",
     "react-fetch-hook": "^1.6.2",
     "react-hot-loader": "^4.12.15",
     "react-icons": "^3.7.0",
