--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,8 @@
     "@babel/plugin-transform-runtime",
     ["@babel/plugin-proposal-decorators", {"legacy": true}],
     ["@babel/plugin-proposal-class-properties", {"loose": true}],
-    "babel-plugin-styled-components"
+    "babel-plugin-styled-components",
+    "@babel/plugin-syntax-dynamic-import"
   ],
   "env": {
     "development": {
