--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "src/**/*.js": [
       "prettier --write",
       "eslint --fix",
+      "npm run test:staged",
       "git add"
     ],
     "*.css": [
