--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "docker:run": "docker run -d -p 3000:3000 hsldevcom/transitlog-ui",
     "start": "node scripts/start.js",
     "start:production": "NODE_ENV=production node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "NODE_ENV=production node scripts/build.js",
     "test": "node scripts/test.js",
     "test:ci": "CI=true node scripts/test.js",
     "test:staged": "CI=true node scripts/test.js --bail --findRelatedTests",
