--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "lodash": "^4.17.11",
     "mapillary-js": "^2.18.1",
     "mini-css-extract-plugin": "0.8.0",
-    "mobx": "^5.14.2",
+    "mobx": "5.15.2",
     "mobx-app": "^1.0.3",
     "mobx-react": "^6.1.4",
-    "mobx-react-lite": "^1.5.0",
-    "mobx-utils": "^5.5.2",
+    "mobx-react-lite": "^1.5.2",
+    "mobx-utils": "^5.5.3",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.25",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
