--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build and publish Docker image
-      uses: whoan/docker-build-with-cache-action@v3
+      uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        image_name: hsldevcom/transitlog-ui
+        name: hsldevcom/transitlog-ui
         username: ddunderfelt
         password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-        build_extra_args: --buildarg=BUILD_ENV=dev
-        image_tag: dev
+        buildargs: BUILD_ENV=dev
+        tags: dev
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
   test-dev:
