--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ yarn-error.log*
 
 cypress/integration/examples/*.js
 cypress/fixtures/example.json
-cypress/videos
-cypress/screenshots
+cypress/screenshots/**/*.png
+cypress/videos/**/*.mp4
