--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,16 @@ jobs:
 #    - name: Deploy with Gitlab CI
 #      run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
   test-dev:
-    needs: dev
+#    needs: dev
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Cache dependencies
         uses: actions/cache@v1
-          with:
-            path: ~/.cache
-            key: dev-cypress-cache
+        with:
+          path: ~/.cache
+          key: dev-cypress-cache
       - name: Cypress tests
         uses: cypress-io/github-action@v1.16.1
         env:
