--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,23 +3,23 @@ name: CI
 on: [push, release]
 
 jobs:
-#  dev:
-#    if: github.ref == 'refs/heads/master'
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Build and publish Docker image
-#      uses: elgohr/Publish-Docker-Github-Action@master
-#      with:
-#        name: hsldevcom/transitlog-ui
-#        username: ddunderfelt
-#        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-#        buildargs: BUILD_ENV=dev
-#        tags: dev
-#    - name: Deploy with Gitlab CI
-#      run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
+  dev:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build and publish Docker image
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: hsldevcom/transitlog-ui
+        username: ddunderfelt
+        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+        buildargs: BUILD_ENV=dev
+        tags: dev
+    - name: Deploy with Gitlab CI
+      run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
   test-dev:
-#    needs: dev
+    needs: dev
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -29,6 +29,10 @@ jobs:
         with:
           path: ~/.cache
           key: dev-cypress-cache
+      - name: Sleep for 30 seconds
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '30s'
       - name: Cypress tests
         uses: cypress-io/github-action@v1.16.1
         env:
