Update components and tests to be compatible.

--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     ],
     "testEnvironment": "jest-environment-jsdom-thirteen",
     "modulePathIgnorePatterns": [
-      "utils"
+      "util"
     ]
   }
 }
