--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -6,7 +6,7 @@ on:
     - staging
 
 jobs:
-  deploy:
+  deploy-stage:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
         tags: stage
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_STAGE_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/232/trigger/pipeline
-  test:
+  test-stage:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
