--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
   test-dev:
-    needs: deploy
+    needs: deploy-dev
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
