--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_STAGE_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/232/trigger/pipeline
   test-stage:
-    needs: deploy
+    needs: deploy-stage
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
