--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -34,6 +34,15 @@ jobs:
         tags: production
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_PROD_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/233/trigger/pipeline
+    - name: Notify of deployment
+      uses: 8398a7/action-slack@v2
+      if: always()
+      with:
+        status: ${{ job.status }}
+        text: Reittiloki PROD deployment status
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   test-production:
     needs: deploy-production
     runs-on: ubuntu-latest
@@ -68,3 +77,12 @@ jobs:
       with:
         name: cypress-videos
         path: cypress/videos
+    - name: Notify of tests
+      uses: 8398a7/action-slack@v2
+      if: always()
+      with:
+        status: ${{ job.status }}
+        text: Reittiloki PROD E2E test status
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
