--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -34,6 +34,15 @@ jobs:
         tags: stage
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_STAGE_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/232/trigger/pipeline
+    - name: Notify of deployment
+      uses: 8398a7/action-slack@v2
+      if: always()
+      with:
+        status: ${{ job.status }}
+        text: Reittiloki STAGE deployment status
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   test-stage:
     needs: deploy-stage
     runs-on: ubuntu-latest
@@ -65,3 +74,12 @@ jobs:
       with:
         name: cypress-videos
         path: cypress/videos
+    - name: Notify of tests
+      uses: 8398a7/action-slack@v2
+      if: always()
+      with:
+        status: ${{ job.status }}
+        text: Reittiloki STAGE E2E test status
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
