--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,36 +3,36 @@ name: Deploy and test dev
 on:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout UI
-      uses: actions/checkout@v2
-      with:
-        ref: master
-    - name: Build UI and publish Docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: hsldevcom/transitlog-ui
-        username: ddunderfelt
-        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-        buildargs: BUILD_ENV=dev
-        tags: dev
-    - name: Checkout server
-      uses: actions/checkout@v2
-      with:
-        repository: HSLdevcom/transitlog-server
-        ref: master
-    - name: Build Server and publish Docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: hsldevcom/transitlog-server
-        username: ddunderfelt
-        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-        tags: dev
+#    - name: Checkout UI
+#      uses: actions/checkout@v2
+#      with:
+#        ref: master
+#    - name: Build UI and publish Docker image
+#      uses: elgohr/Publish-Docker-Github-Action@master
+#      with:
+#        name: hsldevcom/transitlog-ui
+#        username: ddunderfelt
+#        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+#        buildargs: BUILD_ENV=dev
+#        tags: dev
+#    - name: Checkout server
+#      uses: actions/checkout@v2
+#      with:
+#        repository: HSLdevcom/transitlog-server
+#        ref: master
+#    - name: Build Server and publish Docker image
+#      uses: elgohr/Publish-Docker-Github-Action@master
+#      with:
+#        name: hsldevcom/transitlog-server
+#        username: ddunderfelt
+#        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+#        tags: dev
     - name: Deploy with Gitlab CI
       run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
     - name: Notify of deployment
