--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "p-queue": "^6.2.1",
     "polished": "^3.4.4",
     "prop-types": "^15.6.2",
-    "react": "^16.12.0",
+    "react": "17.0.0-rc.0",
     "react-autosuggest": "^9.4.3",
     "react-datepicker": "2.7.0",
     "react-dev-utils": "^10.1.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "17.0.0-rc.0",
     "react-fetch-hook": "^1.8.0",
     "react-icons": "^3.9.0",
     "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
     "react-markdown": "^4.3.1",
     "react-primitives-svg": "^0.0.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
     "react-timer-hook": "^1.1.10",
     "react-virtualized": "^9.21.2",
@@ -78,8 +78,8 @@
     "@types/react-leaflet": "^2.5.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "customize-cra": "^0.9.1",
-    "customize-cra-react-refresh": "^1.0.1",
+    "customize-cra": "^1.0.0",
+    "customize-cra-react-refresh": "^1.1.0",
     "cypress": "^4.5.0",
     "cypress-commands": "^1.1.0",
     "cypress-wait-until": "^1.7.1",
@@ -94,7 +94,7 @@
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react-app-polyfill": "^1.0.6",
-    "react-app-rewired": "^2.1.5",
+    "react-app-rewired": "^2.1.6",
     "react-test-renderer": "^16.12.0"
   },
   "scripts": {
