--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -79,7 +79,7 @@ jobs:
           path: cypress/videos
       - name: Notify of tests
         uses: 8398a7/action-slack@v2
-        if: always()
+        if: failure()
         with:
           status: ${{ job.status }}
           text: Reittiloki PROD E2E test status
