--- a/.env.local
+++ b/.env.local
@@ -21,3 +21,5 @@ REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 # for testing or if you are forking this project for use with other public
 # transport networks. All times will be converted into this timezone.
 REACT_APP_TIMEZONE=Europe/Helsinki
+
+MAPILLARY_CLIENT_TOKEN=
