--- a/.env.production
+++ b/.env.production
@@ -25,3 +25,5 @@ REACT_APP_TIMEZONE=Europe/Helsinki
 
 # API key for weather data
 REACT_APP_FMI_APIKEY=4a22a195-10be-404f-8056-e8aaf5f7506a
+
+MAPILLARY_CLIENT_TOKEN=
