--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@turf/turf": "^6.5.0",
     "@types/jest": "^25.1.2",
     "@types/moment-timezone": "^0.5.12",
     "@types/react": "^16.9.19",
@@ -35,7 +36,7 @@
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.15",
-    "mapillary-js": "^2.20.0",
+    "mapillary-js": "4.0.0",
     "mobx": "^5.15.4",
     "mobx-app": "^1.0.3",
     "mobx-react-lite": "^1.5.2",
