--- a/.env.local
+++ b/.env.local
@@ -22,4 +22,4 @@ REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 # transport networks. All times will be converted into this timezone.
 REACT_APP_TIMEZONE=Europe/Helsinki
 
-MAPILLARY_CLIENT_TOKEN=
+REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4417181845065987|5e7cb47b1a13698f243e25f0cfdbf31f
