--- a/.env.production
+++ b/.env.production
@@ -26,4 +26,4 @@ REACT_APP_TIMEZONE=Europe/Helsinki
 # API key for weather data
 REACT_APP_FMI_APIKEY=4a22a195-10be-404f-8056-e8aaf5f7506a
 
-MAPILLARY_CLIENT_TOKEN=
+REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4699140670124156|c0617576966bc69ea39fb284a78df199
