--- a/.env.local
+++ b/.env.local
@@ -5,8 +5,8 @@ REACT_APP_TRANSITLOG_SERVER_GRAPHQL=http://localhost:4000/graphql/
 REACT_APP_TRANSITLOG=https://reittiloki.hsl.fi
 
 # Auth
-REACT_APP_AUTH_URI=https://id.hsl.fi/openid/auth
-REACT_APP_CLIENT_ID=0220583783240827
+REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
+REACT_APP_CLIENT_ID=7510123698297597
 REACT_APP_REDIRECT_URI=http://localhost:3000
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
@@ -21,3 +21,5 @@ REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 # for testing or if you are forking this project for use with other public
 # transport networks. All times will be converted into this timezone.
 REACT_APP_TIMEZONE=Europe/Helsinki
+
+REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4417181845065987|5e7cb47b1a13698f243e25f0cfdbf31f
