cypress node version tag

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -73,6 +73,8 @@ jobs:
           time: "5m"
       - name: Cypress tests
         uses: cypress-io/github-action@v2
+        with:
+          tag: node-14
         env:
           CYPRESS_BASE_URL: https://dev.reittiloki.hsl.fi
           CYPRESS_CLIENT_ID: ${{ secrets.CYPRESS_CLIENT_ID }}
