updated stage.yml and production.ymlD

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -3,83 +3,86 @@ name: Deploy and test stage
 on:
   push:
     branches:
-    - staging
+      - staging
 
 jobs:
   deploy-stage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: staging
-    - name: Build UI and publish Docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: hsldevcom/transitlog-ui
-        username: ddunderfelt
-        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-        buildargs: BUILD_ENV=stage
-        tags: stage
-    - name: Checkout server
-      uses: actions/checkout@v2
-      with:
-        repository: HSLdevcom/transitlog-server
-        ref: staging
-    - name: Build Server and publish Docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: hsldevcom/transitlog-server
-        username: ddunderfelt
-        password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-        tags: stage
-    - name: Deploy with Gitlab CI
-      run: curl -X POST -F token=${{ secrets.GITLAB_STAGE_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/232/trigger/pipeline
-    - name: Notify of deployment
-      uses: 8398a7/action-slack@v2
-      if: always()
-      with:
-        status: ${{ job.status }}
-        text: Reittiloki STAGE deployment status
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - uses: actions/checkout@v2
+        with:
+          ref: staging
+      - name: Build UI and publish Docker image
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: hsldevcom/transitlog-ui
+          username: ddunderfelt
+          password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+          buildargs: BUILD_ENV=stage
+          tags: stage
+      - name: Checkout server
+        uses: actions/checkout@v2
+        with:
+          repository: HSLdevcom/transitlog-server
+          ref: staging
+      - name: Build Server and publish Docker image
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: hsldevcom/transitlog-server
+          username: ddunderfelt
+          password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+          tags: stage
+      - name: Deploy with Gitlab CI
+        run: curl -X POST -F token=${{ secrets.GITLAB_STAGE_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/232/trigger/pipeline
+      - name: Notify of deployment
+        uses: 8398a7/action-slack@v2
+        if: always()
+        with:
+          status: ${{ job.status }}
+          text: Reittiloki STAGE deployment status
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   test-stage:
     needs: deploy-stage
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: staging
-    - name: Sleep for 5 minutes
-      uses: jakejarvis/wait-action@master
-      with:
-        time: '5m'
-    - name: Cypress tests
-      uses: cypress-io/github-action@v2
-      env:
-        CYPRESS_BASE_URL: https://stage.reittiloki.hsl.fi
-        CYPRESS_CLIENT_ID: ${{ secrets.CYPRESS_CLIENT_ID }}
-        CYPRESS_CLIENT_SECRET: ${{ secrets.CYPRESS_CLIENT_SECRET }}
-        CYPRESS_HSL_TESTING_HSLID_USERNAME: ${{ secrets.CYPRESS_HSL_TESTING_HSLID_USERNAME }}
-        CYPRESS_HSL_TESTING_HSLID_PASSWORD: ${{ secrets.CYPRESS_HSL_TESTING_HSLID_PASSWORD }}
-    - name: Upload screenshot artifacts
-      uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: cypress-screenshots
-        path: cypress/screenshots
-    - name: Upload video artifacts
-      uses: actions/upload-artifact@v1
-      if: always()
-      with:
-        name: cypress-videos
-        path: cypress/videos
-    - name: Notify of tests
-      uses: 8398a7/action-slack@v2
-      if: always()
-      with:
-        status: ${{ job.status }}
-        text: Reittiloki STAGE E2E test status
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - uses: actions/checkout@v2
+        with:
+          ref: staging
+      - name: Sleep for 5 minutes
+        uses: jakejarvis/wait-action@master
+        with:
+          time: "5m"
+      - name: Cypress tests
+        uses: cypress-io/github-action@v2
+        env:
+          CYPRESS_BASE_URL: https://stage.reittiloki.hsl.fi
+          CYPRESS_CLIENT_ID: ${{ secrets.CYPRESS_CLIENT_ID }}
+          CYPRESS_CLIENT_SECRET: ${{ secrets.CYPRESS_CLIENT_SECRET }}
+          CYPRESS_HSL_TESTING_HSLID_USERNAME: ${{ secrets.CYPRESS_HSL_TESTING_HSLID_USERNAME }}
+          CYPRESS_HSL_TESTING_HSLID_PASSWORD: ${{ secrets.CYPRESS_HSL_TESTING_HSLID_PASSWORD }}
+      - name: Upload screenshot artifacts
+        uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - name: Upload video artifacts
+        uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+      - name: Notify of tests
+        uses: 8398a7/action-slack@v2
+        if: always()
+        with:
+          status: ${{ job.status }}
+          text: Reittiloki STAGE E2E test status
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
